@@ -1,3 +1,9 @@
+Q-0.9.0d84
+[fix] downloader: check if freeoszoo is up, else show only kju-app guests
+[new] hint for keyboard shortcuts when entering fullscreen mode
+[fix] localization: German (several)
+[fix] some NSLog's ;)
+
 Q-0.9.0d83
 [fix] localization: German (downloader)
 [fix] downloader: show loading progress of list
